--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.Kinora"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".crear_directores"
+            android:exported="false" />
+        <activity
+            android:name=".crear_director"
+            android:exported="false" />
+        <activity
             android:name=".crear_Cosas"
             android:exported="false" />
         <activity
