Archivos de Reportes y para el manejo de pdf, añadi PDFView y PDFDocument al grandle.kts, inlcuí mis clases en el manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:theme="@style/Theme.Kinora"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Reporte_cine"
+            android:exported="false" />
+        <activity
+            android:name=".Reporte_por_cine"
+            android:exported="false" />
+        <activity
+            android:name=".Reporte_clientes"
+            android:exported="false" />
+        <activity
             android:name=".Peticiones"
             android:exported="false" />
         <activity
