--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,17 @@
         android:theme="@style/Theme.Kinora"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".detalles_enc_peliculas"
+            android:exported="false" />
+        <activity
+            android:name=".peliculas_encargado"
+            android:exported="false" />
+        <activity
             android:name=".PeliculaDetalleCartelera"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Cartelera_Cliente"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Reporte_cine"
             android:exported="false" />
