se implemento el crud de sala v.3

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Kinora"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".GestionarFunciones"
+            android:exported="false" />
+        <activity
             android:name=".GestionarSalas"
             android:exported="false" />
         <activity
