--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,9 @@
             android:name=".Reportes_PDF"
             android:exported="false" />
         <activity
+            android:name=".Usuario_seleccion_sillas"
+            android:exported="false" />
+        <activity
             android:name=".Peticiones"
             android:exported="false" />
         <activity
